force-app/main/default/objects/SampleFulfillment__c/SampleFulfillment__c.object-meta.xml
<CustomObject>
    <label>Sample Fulfillment</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Fulfillment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>