force-app/main/default/objects/SampleFulfillment__c/fields/commitDate__c.field-meta.xml
<CustomField>
    <fullName>commitDate__c</fullName>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>