force-app/main/default/objects/SampleFulfillment__c/fields/commitDateMaintenanceDate__c.field-meta.xml
<CustomField>
    <fullName>commitDateMaintenanceDate__c</fullName>
    <inlineHelpText>Date the latest Commit Date was entered.</inlineHelpText>
    <label>Commit Date Maintenance Date</label>
    <type>Date</type>
</CustomField>