force-app/main/default/objects/SampleFulfillment__c/fields/commitDateSetDate__c.field-meta.xml
<CustomField>
    <fullName>commitDateSetDate__c</fullName>
    <inlineHelpText>Date the first Commit Date was entered.</inlineHelpText>
    <label>Commit Date Set Date</label>
    <type>Date</type>
</CustomField>