force-app/main/default/objects/SampleFulfillment__c/fields/freeSample__c.field-meta.xml
<CustomField>
    <fullName>freeSample__c</fullName>
    <formula>IF( AND(
ISPICKVAL(opportunity__r.requestFreeSample__c,&apos;Yes&apos;),
ISPICKVAL(opportunity__r.freeApproved__c, &apos;Yes&apos;)) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Sample</label>
    <type>Checkbox</type>
</CustomField>