force-app/main/default/objects/SampleFulfillment__c/fields/fulfillmentLocation__c.field-meta.xml
<CustomField>
    <fullName>fulfillmentLocation__c</fullName>
    <label>Fulfillment Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>