force-app/main/default/objects/SampleFulfillment__c/fields/fulfillmentSource__c.field-meta.xml
<CustomField>
    <fullName>fulfillmentSource__c</fullName>
    <label>Fulfillment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>ST1</fullName>
            </value>
            <value>
                <fullName>ST2</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>