force-app/main/default/objects/SampleFulfillment__c/fields/gap2__c.field-meta.xml
<CustomField>
    <fullName>gap2__c</fullName>
    <formula>shipDate__c -  commitDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ship Date - Commit Date</inlineHelpText>
    <label>Gap 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>