force-app/main/default/objects/SampleFulfillment__c/fields/gap__c.field-meta.xml
<CustomField>
    <fullName>gap__c</fullName>
    <formula>commitDate__c - originalCommitDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commit Date - Original Commit Date</inlineHelpText>
    <label>Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>