force-app/main/default/objects/SampleFulfillment__c/fields/GG_IsRequestPrebuild__c.field-meta.xml
<CustomField>
    <fullName>GG_IsRequestPrebuild__c</fullName>
    <description>Indicates if the parent Opportunity is prebuild. It will be prebuild if it has related a prebuild product like &apos;Urgent Paid Sample Request&apos;</description>
    <formula>opportunity__r.isPreBuild__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sample Request Prebuild</label>
    <type>Checkbox</type>
</CustomField>