force-app/main/default/objects/SampleFulfillment__c/fields/GG_IsRequestSample__c.field-meta.xml
<CustomField>
    <fullName>GG_IsRequestSample__c</fullName>
    <description>Indicates if asociates sample request is sample parts request, based on it&apos;s record type</description>
    <formula>opportunity__r.isSample__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Request Sample</label>
    <type>Checkbox</type>
</CustomField>