force-app/main/default/objects/SampleFulfillment__c/fields/locationAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>locationAssignmentDate__c</fullName>
    <inlineHelpText>Date the first Fulfillment Location was entered.</inlineHelpText>
    <label>Location Assignment Date</label>
    <type>Date</type>
</CustomField>