force-app/main/default/objects/SampleFulfillment__c/fields/originalCommitDate__c.field-meta.xml
<CustomField>
    <fullName>originalCommitDate__c</fullName>
    <inlineHelpText>The first Commit Date entered.</inlineHelpText>
    <label>Original Commit Date</label>
    <type>Date</type>
</CustomField>