force-app/main/default/objects/SampleFulfillment__c/fields/partNumber__c.field-meta.xml
<CustomField>
    <fullName>partNumber__c</fullName>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>