force-app/main/default/objects/SampleFulfillment__c/fields/Peoplesoft_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Peoplesoft_Order_Number__c</fullName>
    <label>Peoplesoft Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>