force-app/main/default/objects/SampleFulfillment__c/fields/peopleSoftShipTo__c.field-meta.xml
<CustomField>
    <fullName>peopleSoftShipTo__c</fullName>
    <label>PeopleSoft ShipTo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>