force-app/main/default/objects/SampleFulfillment__c/fields/POReceivingDate__c.field-meta.xml
<CustomField>
    <fullName>POReceivingDate__c</fullName>
    <label>PO Receiving Date</label>
    <type>Date</type>
</CustomField>