force-app/main/default/objects/SampleFulfillment__c/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>