force-app/main/default/objects/SampleFulfillment__c/fields/sampleStage__c.field-meta.xml
<CustomField>
    <fullName>sampleStage__c</fullName>
    <formula>TEXT( opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Stage</label>
    <type>Text</type>
</CustomField>