force-app/main/default/objects/SampleFulfillment__c/fields/sampleType__c.field-meta.xml
<CustomField>
    <fullName>sampleType__c</fullName>
    <formula>IF(CONTAINS(opportunity__r.RecordType.DeveloperName, &apos;Parts&apos;), &apos;Parts&apos;,&apos;Raw/Concore&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Type</label>
    <type>Text</type>
</CustomField>