force-app/main/default/objects/SampleFulfillment__c/fields/shipDate__c.field-meta.xml
<CustomField>
    <fullName>shipDate__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>