force-app/main/default/objects/SampleFulfillment__c/fields/shipDateMaintenanceDate__c.field-meta.xml
<CustomField>
    <fullName>shipDateMaintenanceDate__c</fullName>
    <inlineHelpText>Date the latest Ship Date was entered.</inlineHelpText>
    <label>Ship Date Maintenance Date</label>
    <type>Date</type>
</CustomField>