force-app/main/default/objects/SampleFulfillment__c/fields/shipDateSetDate__c.field-meta.xml
<CustomField>
    <fullName>shipDateSetDate__c</fullName>
    <inlineHelpText>Date the first Ship Date was entered.</inlineHelpText>
    <label>Ship Date Set Date</label>
    <type>Date</type>
</CustomField>