force-app/main/default/objects/SampleFulfillment__c/fields/shipToContact__c.field-meta.xml
<CustomField>
    <fullName>shipToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you don&apos;t have a contact in Salesforce, leave this field blank and enter the ship to address manually.</description>
    <inlineHelpText>If you don&apos;t have a contact in Salesforce, leave this field blank and enter the ship to address manually.</inlineHelpText>
    <label>Ship to contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sample Fulfillments</relationshipLabel>
    <relationshipName>Sample_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>