force-app/main/default/objects/SampleFulfillment__c/fields/shipVs1stPromise__c.field-meta.xml
<CustomField>
    <fullName>shipVs1stPromise__c</fullName>
    <formula>shipDate__c -  originalCommitDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ship Date - Original Commit Date</inlineHelpText>
    <label>Ship vs 1st Promise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>