force-app/main/default/objects/SampleFulfillment__c/fields/shipVsLatestRequest__c.field-meta.xml
<CustomField>
    <fullName>shipVsLatestRequest__c</fullName>
    <formula>shipDate__c - opportunity__r.requestedShipDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship vs Latest Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>