force-app/main/default/objects/SampleFulfillment__c/fields/specification__c.field-meta.xml
<CustomField>
    <fullName>specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification</label>
    <referenceTo>Specification__c</referenceTo>
    <relationshipLabel>Sample Fulfillments</relationshipLabel>
    <relationshipName>Sample_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>