force-app/main/default/objects/SampleFulfillment__c/fields/specProductCode__c.field-meta.xml
<CustomField>
    <fullName>specProductCode__c</fullName>
    <formula>IF( ISBLANK(specification__r.productCode__c ) , &apos;No Product Code Assigned&apos;, specification__r.productCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spec Product Code</label>
    <type>Text</type>
</CustomField>