force-app/main/default/objects/SampleFulfillment__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <isActive>false</isActive>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>TBD1</fullName>
                <isActive>false</isActive>
                <label>TBD1</label>
            </value>
            <value>
                <fullName>TBD2</fullName>
                <isActive>false</isActive>
                <label>TBD2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>