force-app/main/default/objects/SampleFulfillment__c/fields/stpHM__c.field-meta.xml
<CustomField>
    <fullName>stpHM__c</fullName>
    <formula>IF(isnull(shipDate__c), &apos;&apos;, IF( shipVs1stPromise__c &gt; 0, &apos;Miss&apos;, &apos;Hit&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STP H/M</label>
    <type>Text</type>
</CustomField>