force-app/main/default/objects/SampleFulfillment__c/fields/streetAddress__c.field-meta.xml
<CustomField>
    <fullName>streetAddress__c</fullName>
    <label>Street Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>