force-app/main/default/objects/SampleFulfillment__c/fields/strHM__c.field-meta.xml
<CustomField>
    <fullName>strHM__c</fullName>
    <formula>IF(isnull(shipDate__c), &apos;&apos;, IF(shipVsLatestRequest__c  &gt; 0, &apos;Miss&apos;, &apos;Hit&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STR H/M</label>
    <type>Text</type>
</CustomField>