force-app/main/default/objects/SampleFulfillment__c/fields/trackingNum__c.field-meta.xml
<CustomField>
    <fullName>trackingNum__c</fullName>
    <label>Tracking #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>