force-app/main/default/objects/SampleFulfillment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>opportunity__c</columns>
    <columns>sampleType__c</columns>
    <columns>sampleStage__c</columns>
    <columns>freeSample__c</columns>
    <columns>quantity__c</columns>
    <columns>status__c</columns>
    <columns>fulfillmentLocation__c</columns>
    <columns>fulfillmentSource__c</columns>
    <columns>shipDate__c</columns>
    <columns>commitDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>