force-app/main/default/objects/SampleFulfillment__c/listViews/Cancelled.listView-meta.xml
<ListView>
    <fullName>Cancelled</fullName>
    <columns>NAME</columns>
    <columns>opportunity__c</columns>
    <columns>status__c</columns>
    <columns>quantity__c</columns>
    <columns>fulfillmentLocation__c</columns>
    <columns>fulfillmentSource__c</columns>
    <columns>shipDate__c</columns>
    <columns>commitDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled</label>
    <language>en_US</language>
</ListView>