force-app/main/default/objects/SampleFulfillment__c/listViews/Open_Assigned.listView-meta.xml
<ListView>
    <fullName>Open_Assigned</fullName>
    <columns>NAME</columns>
    <columns>opportunity__c</columns>
    <columns>sampleType__c</columns>
    <columns>sampleStage__c</columns>
    <columns>freeSample__c</columns>
    <columns>quantity__c</columns>
    <columns>status__c</columns>
    <columns>fulfillmentLocation__c</columns>
    <columns>fulfillmentSource__c</columns>
    <columns>shipDate__c</columns>
    <columns>commitDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fulfillmentLocation__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>commitDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open - Assigned Location</label>
    <language>en_US</language>
</ListView>