force-app/main/default/objects/SampleFulfillment__c/listViews/Open_F_Details.listView-meta.xml
<ListView>
    <fullName>Open_F_Details</fullName>
    <columns>NAME</columns>
    <columns>opportunity__c</columns>
    <columns>sampleType__c</columns>
    <columns>sampleStage__c</columns>
    <columns>freeSample__c</columns>
    <columns>quantity__c</columns>
    <columns>status__c</columns>
    <columns>fulfillmentLocation__c</columns>
    <columns>fulfillmentSource__c</columns>
    <columns>shipDate__c</columns>
    <columns>commitDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>sampleStage__c</field>
        <operation>equals</operation>
        <value>Fulfillment</value>
    </filters>
    <label>Open - F Details</label>
    <language>en_US</language>
</ListView>